[gd_scene load_steps=27 format=2]

[ext_resource path="res://area_triggers/car_deleter.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/roads/dark_grass.png" type="Texture" id=2]
[ext_resource path="res://cam.gd" type="Script" id=3]
[ext_resource path="res://assets/roads/grass.png" type="Texture" id=4]
[ext_resource path="res://assets/roads/two_lane_road.png" type="Texture" id=5]
[ext_resource path="res://assets/roads/water.png" type="Texture" id=6]
[ext_resource path="res://main.gd" type="Script" id=7]
[ext_resource path="res://assets/roads/merge_road.png" type="Texture" id=8]
[ext_resource path="res://assets/roads/cliff_edge.png" type="Texture" id=9]
[ext_resource path="res://area_triggers/sand.gd" type="Script" id=10]
[ext_resource path="res://area_triggers/solid_ground.gd" type="Script" id=11]
[ext_resource path="res://area_triggers/arrest.tscn" type="PackedScene" id=12]
[ext_resource path="res://car_spawner.tscn" type="PackedScene" id=13]
[ext_resource path="res://area_triggers/merge_point.gd" type="Script" id=14]
[ext_resource path="res://area_triggers/split_point.gd" type="Script" id=15]
[ext_resource path="res://win.gd" type="Script" id=16]

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/one_lane_road.png-0067d9b713929ce8d649ec756cfa5c61.stex"

[sub_resource type="StreamTexture" id=19]
load_path = "res://.import/sand_edge.png-d066c094581c48c4826682825da600ba.stex"

[sub_resource type="StreamTexture" id=20]
flags = 4

[sub_resource type="TileSet" id=1]
0/name = "dark_grass.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "grass.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "one_lane_road.png 2"
2/texture = SubResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "two_lane_road.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "merge_road.png 4"
4/texture = ExtResource( 8 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 128, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "water.png 5"
5/texture = ExtResource( 6 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 128, 128 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "sand_edge.png 6"
6/texture = SubResource( 19 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 128, 128 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "sand_edge_top.png 7"
7/texture = SubResource( 20 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 128, 128 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "cliff_edge.png 8"
8/texture = ExtResource( 9 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 128, 128 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 1300, 24.0416 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 158.392, 1676.9 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 10.6065, 7.7786 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 3.13774, 9.89954 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 79.1959, 10 )

[sub_resource type="RectangleShape2D" id=21]

[node name="Main" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="TileMap" parent="."]
mode = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -1507330, 1, 0, -1507329, 8, 0, -1572864, 3, 0, -1572863, 6, 0, -1441794, 1, 0, -1441793, 8, 0, -1507328, 3, 0, -1507327, 6, 0, -1376258, 1, 0, -1376257, 8, 0, -1441792, 3, 0, -1441791, 6, 0, -1310722, 1, 0, -1310721, 8, 0, -1376256, 3, 0, -1376255, 6, 0, -1245186, 1, 0, -1245185, 8, 0, -1310720, 3, 0, -1310719, 6, 0, -1179650, 1, 0, -1179649, 8, 0, -1245184, 3, 0, -1245183, 6, 0, -1114114, 1, 0, -1114113, 8, 0, -1179648, 3, 0, -1179647, 6, 0, -1048578, 1, 0, -1048577, 8, 0, -1114112, 3, 0, -1114111, 6, 0, -983042, 1, 0, -983041, 8, 0, -1048576, 3, 0, -1048575, 6, 0, -917506, 1, 0, -917505, 8, 0, -983040, 3, 0, -983039, 6, 0, -851970, 1, 0, -851969, 8, 0, -917504, 3, 0, -917503, 6, 0, -786434, 1, 0, -786433, 8, 0, -851968, 3, 0, -851967, 6, 0, -720898, 1, 0, -720897, 8, 0, -786432, 3, 0, -786431, 6, 0, -655362, 1, 0, -655361, 8, 0, -720896, 3, 0, -720895, 6, 0, -589826, 1, 0, -589825, 8, 0, -655360, 3, 0, -655359, 6, 0, -524290, 1, 0, -524289, 8, 0, -589824, 3, 0, -589823, 6, 0, -458754, 1, 0, -458753, 8, 0, -524288, 3, 0, -524287, 6, 0, -393218, 1, 0, -393217, 8, 0, -458752, 3, 0, -458751, 6, 0, -327682, 1, 0, -327681, 8, 0, -393216, 3, 0, -393215, 6, 0, -262146, 1, 0, -262145, 8, 0, -327680, 3, 0, -327679, 6, 0, -196610, 1, 0, -196609, 8, 0, -262144, 3, 0, -262143, 6, 0, -131074, 1, 0, -131073, 8, 0, -196608, 3, 0, -196607, 6, 0, -65538, 1, 0, -65537, 8, 0, -131072, 3, 0, -131071, 6, 0, -2, 1, 0, -1, 8, 0, -65536, 3, 0, -65535, 6, 0, 65534, 1, 0, 65535, 8, 0, 0, 3, 0, 1, 6, 0, 131070, 1, 0, 131071, 8, 0, 65536, 3, 0, 65537, 6, 0, 196606, 1, 0, 196607, 8, 0, 131072, 3, 0, 131073, 6, 0, 262142, 1, 0, 262143, 8, 0, 196608, 3, 0, 196609, 6, 0, 327678, 1, 0, 327679, 8, 0, 262144, 3, 0, 262145, 6, 0, 393214, 1, 0, 393215, 8, 0, 327680, 3, 0, 327681, 6, 0, 458750, 1, 0, 458751, 8, 0, 393216, 3, 0, 393217, 6, 0, 524286, 1, 0, 524287, 8, 0, 458752, 3, 0, 458753, 6, 0, 589822, 1, 0, 589823, 8, 0, 524288, 3, 0, 524289, 6, 0, 655358, 1, 0, 655359, 8, 0, 589824, 3, 0, 589825, 6, 0, 720894, 1, 0, 720895, 8, 0, 655360, 3, 0, 655361, 6, 0, 786430, 1, 0, 786431, 8, 0, 720896, 3, 0, 720897, 6, 0, 851966, 1, 0, 851967, 8, 0, 786432, 3, 0, 786433, 6, 0 )

[node name="Cars" type="YSort" parent="."]

[node name="Cam" type="Camera2D" parent="."]
position = Vector2( 1073, -967 )
current = true
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 3 )

[node name="Spawners" type="Node2D" parent="."]

[node name="StartSpawner" type="Node2D" parent="Spawners"]
position = Vector2( 972, -894 )
rotation = -0.785398

[node name="StartSpawner2" type="Node2D" parent="Spawners"]
position = Vector2( 1014, -908 )
rotation = -0.785398

[node name="PlayerSpawn" type="Node2D" parent="Spawners"]
position = Vector2( -240, 344 )
rotation = -0.785398

[node name="CrashedCar" type="Node2D" parent="Spawners"]
position = Vector2( 1077, -970 )
rotation = -0.590384

[node name="CrashedCar2" type="Node2D" parent="Spawners"]
position = Vector2( 1076, -958 )
rotation = -1.99628

[node name="Police" type="Node2D" parent="Spawners"]
position = Vector2( -704, 654 )
rotation = 0.587672

[node name="Police2" type="Node2D" parent="Spawners"]
position = Vector2( -718, 670 )
rotation = 1.26635

[node name="Police3" type="Node2D" parent="Spawners"]
position = Vector2( -687, 636 )
rotation = 1.62486

[node name="Police4" type="Node2D" parent="Spawners"]
position = Vector2( -616, 759 )
rotation = -1.97353

[node name="Police5" type="Node2D" parent="Spawners"]
position = Vector2( -630, 775 )
rotation = -1.29485

[node name="Police6" type="Node2D" parent="Spawners"]
position = Vector2( -599, 741 )
rotation = -0.936342

[node name="Police7" type="Node2D" parent="Spawners"]
position = Vector2( 1105, -939 )
rotation = 2.17746

[node name="Police8" type="Node2D" parent="Spawners"]
position = Vector2( 1093, -948 )
rotation = 2.85614

[node name="Police9" type="Node2D" parent="Spawners"]
position = Vector2( 1109, -958 )
rotation = -3.06854

[node name="SameLane" parent="Spawners" instance=ExtResource( 13 )]
position = Vector2( -756, 834 )

[node name="SameLane2" parent="Spawners" instance=ExtResource( 13 )]
position = Vector2( -721, 828 )

[node name="OppositeLane" parent="Spawners" instance=ExtResource( 13 )]
position = Vector2( 1463, -1442 )
rotation = -3.92699

[node name="OppositeLane2" parent="Spawners" instance=ExtResource( 13 )]
position = Vector2( 1498, -1448 )
rotation = -3.92699

[node name="AreaTriggers" type="Node2D" parent="."]
visible = false

[node name="CarDeleter2" parent="AreaTriggers" instance=ExtResource( 1 )]
position = Vector2( -796, 863 )

[node name="CarDeleter" parent="AreaTriggers" instance=ExtResource( 1 )]

[node name="Sand" type="Area2D" parent="AreaTriggers"]
position = Vector2( 72, 45 )
rotation = -0.785398
collision_layer = 0
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTriggers/Sand"]
position = Vector2( 74.2462, 28.9913 )
shape = SubResource( 15 )
disabled = true

[node name="SolidGround" type="Area2D" parent="AreaTriggers"]
rotation = 0.785398
collision_layer = 0
collision_mask = 3
monitorable = false
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTriggers/SolidGround"]
position = Vector2( -22.6273, -499.571 )
shape = SubResource( 18 )

[node name="MergePoint" type="Area2D" parent="AreaTriggers"]
position = Vector2( 959, -864 )
rotation = 0.785398
collision_layer = 0
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTriggers/MergePoint"]
position = Vector2( 19.0917, -90.5092 )
shape = SubResource( 16 )

[node name="SplitPoint" type="Area2D" parent="AreaTriggers"]
position = Vector2( 1114, -1037 )
rotation = 0.785398
collision_layer = 0
monitorable = false
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTriggers/SplitPoint"]
position = Vector2( -2.43066, -14.1421 )
shape = SubResource( 17 )

[node name="Arrest" parent="AreaTriggers" instance=ExtResource( 12 )]

[node name="Arrest2" parent="AreaTriggers" instance=ExtResource( 12 )]
position = Vector2( 1128, -869 )

[node name="Win" type="Area2D" parent="AreaTriggers"]
position = Vector2( 1134, -1054 )
rotation = 0.785398
collision_layer = 0
monitorable = false
script = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTriggers/Win"]
position = Vector2( 0.707153, 0.00012207 )
shape = SubResource( 24 )

[node name="Wall" type="StaticBody2D" parent="."]
visible = false
position = Vector2( -13, -16 )
rotation = -0.785398
scale = Vector2( 150, 2 )
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
shape = SubResource( 21 )

[node name="StartBlocker" type="KinematicBody2D" parent="."]
position = Vector2( 1019, -928 )
rotation = 0.785398
scale = Vector2( 2, 2 )
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StartBlocker"]
visible = false
polygon = PoolVector2Array( -7.77817, 19.0919, -2.47485, 17.3242, -1.06064, -0.353577, 17.3241, 1.76776, 15.5564, -14.1422, -8.13171, -4.59613 )

[node name="Tween" type="Tween" parent="."]
